--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -411,7 +411,39 @@
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow59">
-                                            <wm-gridcolumn columnwidth="12" name="gridcolumn123"></wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="12" name="gridcolumn123">
+                                                <wm-livelist listclass="list-group" itemclass="list-group-item" template="true" itemsperrow="xs-1 sm-1 md-1 lg-1" class="media-list" dataset="bind:Variables.FormMessagesData.dataSet" navigation="Scroll" name="livelistFormMessages"
+                                                loadingdatamsg="Loading Messages..." nodatamessage="No Messages" orderby="postedAt:asc" disableitem="true">
+                                                    <wm-listtemplate layout="media" name="listtemplate1">
+                                                        <wm-container class="media-left media-top" name="container4">
+                                                            <wm-picture name="Picture" class="media-object" width="32pt" height="32pt" shape="circle" picturesource="bind:!!Variables.CurrentUserDetails.dataSet.id ? 'services/cx2/Users/'+Variables.FormMessagesData.dataSet.data[$i].userId+'/content/photo' : 'resources/images/imagelists/fa-user-170.png'"></wm-picture>
+                                                        </wm-container>
+                                                        <wm-container class="media-body" padding="unset 1.5em unset 1.25em" name="container5">
+                                                            <wm-label class="pull-left" caption="bind:Variables.FormMessagesData.dataSet.data[$i].users.firstName +&quot; &quot;+Variables.FormMessagesData.dataSet.data[$i].users.lastName" name="Name" margin="0em unset 0.5em unset"
+                                                            fontsize="1.143" fontunit="em"></wm-label>
+                                                            <wm-label name="Time" class="pull-right text-muted" caption="bind:Variables.FormMessagesData.dataSet.data[$i].postedAt | toDate: 'yyyy-MM-dd hh:mm a'"></wm-label>
+                                                            <wm-label caption="bind:Variables.FormMessagesData.dataSet.message" name="Description" class="p text-muted"></wm-label>
+                                                        </wm-container>
+                                                    </wm-listtemplate>
+                                                </wm-livelist>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow81" padding="1em unset">
+                                            <wm-gridcolumn columnwidth="1" name="gridcolumn157_2" horizontalalign="center">
+                                                <wm-picture class="media-object" width="32pt" height="32pt" name="picture3" picturesource="bind:!!Variables.CurrentUserDetails.dataSet.id ? 'services/cx2/Users/'+Variables.CurrentUserDetails.dataSet.id+'/content/photo' : 'resources/images/imagelists/fa-user-170.png'"
+                                                shape="circle"></wm-picture>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="9" name="gridcolumn158_1">
+                                                <wm-text name="textAddMessage" placeholder="Type a message....." on-change="textAddMessageChange($event, $scope, newVal, oldVal)" on-blur="textAddMessageBlur($event, $scope)" on-keyup="textAddMessageKeyup($event, $scope)"></wm-text>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="2" name="gridcolumn159_1">
+                                                <wm-button class="btn-default btn-primary" caption="Post" type="button" margin="unset 0.5em" name="buttonAddMessage" iconclass="wi wi-send" on-click="Variables.PostFormMessage.invoke()" disabled="bind:disableMessageBox"></wm-button>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow82">
+                                            <wm-gridcolumn columnwidth="1" name="gridcolumn160_1"></wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="9" name="gridcolumn161"></wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="2" name="gridcolumn162"></wm-gridcolumn>
                                         </wm-gridrow>
                                     </wm-layoutgrid>
                                 </wm-tabpane>
