Vendor Review- Datetime fields displaying same time Files modified - [Cx2QueryExecutorServiceImpl.java,ManageMunicipalityVendors.js,QueryExecutionController.java,servicedef.xml,ManageMunicipalityVendors.variables.json,cx2_query.json,Forms.html,Cx2QueryExecutorService.java,ManageMunicipalityVendors.html]

--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -437,7 +437,7 @@
                                                 <wm-text name="textAddMessage" placeholder="Type a message....." on-change="textAddMessageChange($event, $scope, newVal, oldVal)" on-blur="textAddMessageBlur($event, $scope)" on-keyup="textAddMessageKeyup($event, $scope)"></wm-text>
                                             </wm-gridcolumn>
                                             <wm-gridcolumn columnwidth="2" name="gridcolumn159_1">
-                                                <wm-button class="btn-default btn-primary" caption="Post" type="button" margin="unset 0.5em" name="buttonAddMessage" iconclass="wi wi-send" on-click="Variables.PostFormMessage.invoke()" disabled="bind:disableMessageBox"></wm-button>
+                                                <wm-button class="btn-default btn-primary" caption="Post" type="button" margin="unset 0.5em" name="buttonAddMessage" iconclass="wi wi-send" on-click="Variables.PostFormMessage.invoke()" disabled="true"></wm-button>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow82">
