Removed modifiedAt reference from DevFormDataEntry and ProcessForms Files modified - [servicedef.xml,DevFormDataEntry.html,cx2_query.json,ProcessForms.html]

--- a/src/main/webapp/pages/DevFormDataEntry/DevFormDataEntry.html
+++ b/src/main/webapp/pages/DevFormDataEntry/DevFormDataEntry.html
@@ -88,7 +88,7 @@
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow1">
                                     <wm-gridcolumn name="gridcolumn1" columnwidth="4">
-                                        <wm-form-field name="modifiedAt" displayname="Modified At" show="true" primary-key="false" generator="assigned" key="modifiedAt" type="timestamp" widget="timestamp"></wm-form-field>
+                                        <wm-form-field name="dateModified" displayname="Date Modified" show="true" primary-key="false" generator="assigned" key="dateModified" type="timestamp" widget="timestamp" defaultvalue="SYSUTCDATETIME()"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
