--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -246,7 +246,18 @@
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow65">
-                                            <wm-gridcolumn columnwidth="12" name="gridcolumn135"></wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="12" name="gridcolumn135">
+                                                <wm-livegrid formlayout="dialog" name="livegrid5">
+                                                    <wm-grid gridfirstrowselect="true" editmode="dialog" title="Document List" dataset="bind:Variables.Cx2DocumentData.dataSet" navigation="Classic" name="gridDocuments">
+                                                        <wm-grid-column binding="filename" caption="Filename" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
+                                                        <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
+                                                        <wm-grid-action key="addNewRow" display-name="New" show="true" class="btn-primary" iconclass="wi wi-plus" title="New" action="Widgets.dialogUploadDocument.open()" shortcutkey=""
+                                                        disabled="false"></wm-grid-action>
+                                                        <wm-grid-row-action key="customRow" display-name="View" show="true" class="btn-transparent" iconclass="wi wi-pageview" title="View" disabled="false"></wm-grid-row-action>
+                                                        <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
+                                                    </wm-grid>
+                                                </wm-livegrid>
+                                            </wm-gridcolumn>
                                         </wm-gridrow>
                                     </wm-layoutgrid>
                                 </wm-tabpane>
@@ -805,6 +816,21 @@
             </wm-layoutgrid>
             <wm-dialogactions name="dialogactions4">
                 <wm-button class="btn-secondary" caption="Close" on-click="closeDialog()" name="button11" iconclass="wi wi-cancel"></wm-button>
+            </wm-dialogactions>
+        </wm-dialog>
+    </wm-view>
+    <wm-view class="dialog-view" name="view5">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="Attach File" iconclass="wi wi-attach-file" name="dialogUploadDocument" on-close="dialogUploadDocumentClose($event, $scope)">
+            <wm-layoutgrid name="layoutgrid23">
+                <wm-gridrow name="gridrow85">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn167">
+                        <input type="file" name="docToUpload" ng-file-model="docToUpload">
+                    </wm-gridcolumn>
+                </wm-gridrow>
+            </wm-layoutgrid>
+            <wm-dialogactions name="dialogactions5">
+                <wm-button class="btn-primary" caption="OK" on-click="buttonUploadFileClick($event, $scope)" name="buttonUploadFile" iconclass="wi wi-check" disabled="bind:!docToUpload"></wm-button>
+                <wm-button class="btn-secondary" caption="Cancel" type="button" margin="unset 0.5em" name="button13" on-click="Widgets.dialogUploadDocument.close()" iconclass="wi wi-cancel"></wm-button>
             </wm-dialogactions>
         </wm-dialog>
     </wm-view>
